Fix box shadow on safari

--- a/app/assets/stylesheets/banner.scss
+++ b/app/assets/stylesheets/banner.scss
@@ -14,6 +14,7 @@
   background: -moz-linear-gradient(top, #4e78a0, #154972);
   -moz-box-shadow: 0 2px 8px 2px #000;
   -webkit-box-shadow: 0 2px 6px 2px #000;
+  box-shadow: 0 2px 6px 2px #000;
   margin-bottom: 30px;
   p {
     margin: 0;
